src/css/goalList.css
.goalList {
    display: flex;
    flex-direction: column;
    background: #4A707A;
    justify-content: center;
    text-align: center;
    padding: 2em 4rem;
    border-radius: 10px;
    width: 900px;
}



.goalItem {
    margin: 15px auto;
    width: 80%;
    color: black;
}

.goalItem a{
    font-weight: bold;
    text-decoration: underline;
}

.category {
    text-align: left;
}

.incomplete {
    background-color: rgb(238, 238, 238) !important;
}

.complete {
    background: linear-gradient(-45deg, #22577a, #38a3a5, #57cc99, #80ed99, #c7f9cc);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
	height: 100vh;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

@media screen and (max-width: 940px){
    .goalList{
        width: 800px;
    }
}


@media screen and (max-width: 825px){
    .goalList{
        width: 700px;
    }
}

@media screen and (max-width: 750px){
    .goalList{
        width: 500px;
    }
    .goalItem{
        width: 100%;
    }
}

